life.css
body {
    background-color: #c0c0c0;
}

canvas#lifeCanvas {
    border-color: black;
    border-style: solid;
    border-width: 1px;

    margin: auto;

    background-image: url("lifeGrid.svg");
}

div#inputContainer * {
    font-size: large;
}


div#follower {
    position: absolute;
    top: 0px;
    left: 0px;
    width:  768px;
    height: 512px;
    background-repeat: no-repeat;
}


div#follower.glider {
    background-image: url("lifeGlider.svg");
}


div#patternClickableContainer h2{
    width: 100%;
    text-align: center;
}

p#patternInfo {
    font-size: x-large;
}

